fixes links in service area

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -178,6 +178,14 @@ hr.small {
     margin-bottom: 30px;
 }
 
+.service-item a:link {
+  color: #000000;
+}
+
+.btn a {
+  color: #337ab7;
+}
+
 /* Callout */
 
 .callout {
