--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -251,6 +251,14 @@ footer {
     padding: 100px 0;
 }
 
+footer .main-presented-by img {
+  height: 120px;
+}
+
+footer .list-inline img {
+  height: 70px;
+}
+
 #to-top {
   display: none;
   position: fixed;
