Adds Omar Alaouf keynote information to Sunday Modal

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -229,6 +229,12 @@ hr.small {
     margin: 10px;
 }
 
+.headshot{
+  float: left;
+  max-width: 50%;
+  margin-right: 10px;
+}
+
 /* Map */
 
 .map {
