--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -199,7 +199,14 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    background:
+    /*Gradient overlay*/
+    linear-gradient(
+      rgba(0, 0, 0, 0.45),
+      rgba(0, 0, 0, 0.70)
+      ),
+    /*Image */
+    url(../img/calloutbg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
