--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -34,6 +34,14 @@ body {
     font-weight: 700;
 }
 
+.bg-sponsor{
+background: #ffffff;
+}
+
+.bg-primary{
+  background: #01aef0;
+}
+
 /* Custom Button Styles */
 
 .btn-dark {
